Redis post commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-# PostgreSQL Configuration
-spring.datasource.username=postgres
-spring.datasource.password=
-spring.datasource.url=jdbc:postgresql://localhost:5432/training
+#Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
